--- a/app/src/main/res/layout/couple_grid_layout.xml
+++ b/app/src/main/res/layout/couple_grid_layout.xml
@@ -4,11 +4,11 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:adjustViewBounds="true"
-    app:cardBackgroundColor="#212024"
+    app:cardBackgroundColor="#000000"
     app:contentPadding="8dp">
 
     <ImageView
-        android:id="@+id/rv_grid_image"
+        android:id="@+id/rv_grid_couple_image"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:adjustViewBounds="true"
