--- a/app/src/main/res/layout/launch_activity.xml
+++ b/app/src/main/res/layout/launch_activity.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_height="match_parent"
+    android:layout_width="match_parent">
+<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -40,7 +43,7 @@
 
     <RelativeLayout
         android:id="@+id/relativeLayout"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -52,7 +55,7 @@
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv_grid"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content">
 
         </androidx.recyclerview.widget.RecyclerView>
@@ -111,3 +114,4 @@
         app:srcCompat="@drawable/solnyshko" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+</ScrollView>
