--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,14 +7,20 @@
         <item name="colorAccent">@color/colorAccent</item>
         <item name="android:windowBackground">#212024</item>
         <item name="android:textColor">#FFFFFF</item>
+        <item name="android:fitsSystemWindows">true</item>
+        <item name="android:windowDrawsSystemBarBackgrounds">true</item>
+        <item name="android:statusBarColor">@android:color/transparent</item>
     </style>
-    <style name="MainTheme" parent="Theme.AppCompat.DayNight.DarkActionBar">
+    <style name="MainTheme" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
         <item name="android:windowBackground">#000000</item>
         <item name="android:textColor">#FFFFFF</item>
+    </style>
+    <style name="LaunchTheme" parent="MainTheme">
+        <item name="android:windowBackground">@drawable/splash</item>
     </style>
 
 </resources>
