--- a/app/src/main/res/layout/week_layout.xml
+++ b/app/src/main/res/layout/week_layout.xml
@@ -31,7 +31,7 @@
             tools:ignore="UselessParent">
 
             <TextView
-                android:id="@+id/monday"
+                android:id="@+id/week_text"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:fontFamily="sans-serif"
@@ -39,10 +39,10 @@
                 android:textSize="24sp" />
 
             <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/rv_monday"
+                android:id="@+id/rv_week"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/monday"
+                android:layout_below="@id/week_text"
                 tools:layout_editor_absoluteX="1dp"
                 tools:layout_editor_absoluteY="1dp" />
         </RelativeLayout>
