--- a/app/src/main/res/layout/activity_couple.xml
+++ b/app/src/main/res/layout/activity_couple.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".CoupleActivity">
+    tools:context=".activities.CoupleActivity">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_grid_couple"
